--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <artifactId>json</artifactId>
             <version>20171018</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.12</version>
+        </dependency>
+
     </dependencies>
 
 </project>
